--- a/projects/project-domino.yaml
+++ b/projects/project-domino.yaml
@@ -30,7 +30,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
   creationTimestamp: null
-  name: domino-apps
+  name: project-domino
   namespace: argocd
 spec:
   generators:
@@ -42,9 +42,7 @@ spec:
       revision: ""
   template:
     metadata:
-      labels:
-        app.kubernetes.io/name: '{{ path[1] }}'
-      name: '{{ path[1] }}'
+      name: '{{ path[0] }}-{{ path[1] }}'
       namespace: argocd
     spec:
       project: domino
