--- a/workloads/domino/apps/appset.yaml
+++ b/workloads/domino/apps/appset.yaml
@@ -3,6 +3,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
   name: domino-apps
+  namespace: argocd
 spec:
   generators:
     - git:
