--- a/workloads/ardvark/app1/envs/dev/kustomization.yaml
+++ b/workloads/ardvark/app1/envs/dev/kustomization.yaml
@@ -1,7 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+commonLabels:
+  env: dev
+
+resources:
+ - ../../base
+
 patches:
-- path: liveness-patch.yaml
+- path: deployment.yaml
   target:
     kind: Deployment
