--- a/projects/project-domino.yaml
+++ b/projects/project-domino.yaml
@@ -34,25 +34,31 @@ metadata:
   namespace: argocd
 spec:
   generators:
-  - git:
-      files:
-      - path: workloads/domino/**/*.yaml
-      repoURL: https://github.com/imjoshholloway/gitops-playground.git
-      requeueAfterSeconds: 20
-      revision: ""
+  - matrix:
+      generators:
+        - clusters:
+            selector:
+              matchLabels:
+                argocd.argoproj.io/secret-type: cluster
+                workload-type: apps
+        - git:
+            repoURL: https://github.com/redhat-developer-demos/openshift-gitops-examples
+            requeueAfterSeconds: 20
+            revision: ""
+            directories:
+              - path: apps/**
   template:
     metadata:
-      name: '{{ path[0] }}-{{ path[1] }}'
-      namespace: argocd
+      name: 'domino-app-{{ path.basename }}'
     spec:
       project: domino
       destination:
-        namespace: '{{ path[1] }}'
-        server: 'https://kubernetes.default.svc'
+        namespace: '{{ path }}'
+        server: '{{ server }}'
       source:
-        repoURL: https://github.com/imjoshholloway/gitops-playground.git
+        repoURL: https://github.com/redhat-developer-demos/openshift-gitops-examples
         path: '{{ path }}'
-        targetRevision: 'main'
+        targetRevision: 'HEAD'
         plugin:
           name: argocd-lovely-plugin
       syncPolicy:
